Fixes Bronze Furnace typo

--- a/src/main/resources/assets/metallurgycm/lang/en_US.lang
+++ b/src/main/resources/assets/metallurgycm/lang/en_US.lang
@@ -17,7 +17,7 @@ container.metallurgycm.crusher.iron=Iron Crusher
 container.metallurgycm.crusher.steel=Steel Crusher
 container.metallurgycm.crusher.stone=Stone Crusher
 
-container.metallurgycm.furnace.bronze=bronze Furnace
+container.metallurgycm.furnace.bronze=Bronze Furnace
 container.metallurgycm.furnace.copper=Copper Furnace
 container.metallurgycm.furnace.iron=Iron Furnace
 container.metallurgycm.furnace.steel=Steel Furnace
