--- a/src/main/resources/assets/metallurgycm/lang/en_US.lang
+++ b/src/main/resources/assets/metallurgycm/lang/en_US.lang
@@ -70,3 +70,9 @@ tile.metallurgycm.smelter.inolashite.name=Inolashite Smelter
 tile.metallurgycm.smelter.kalendrite.name=Kalendrite Smelter
 tile.metallurgycm.smelter.vulcanite.name=Vulcanite Smelter
 tile.metallurgycm.smelter.sanguinite.name=Sanguinite Smelter
+
+nei.recipe.metallurgycm.abstractor=Abstracting
+nei.recipe.metallurgycm.catalyst=Abstracting Catalyst
+nei.recipe.metallurgycm.crusher=Crushing
+nei.recipe.metallurgycm.metal.furnace=Metal Furnace
+nei.recipe.metallurgycm.smelter=Lava Smelting
