Made the XP annotation in NEI localizable

--- a/src/main/resources/assets/metallurgycm/lang/en_US.lang
+++ b/src/main/resources/assets/metallurgycm/lang/en_US.lang
@@ -76,3 +76,4 @@ nei.recipe.metallurgycm.catalyst=Abstracting Catalyst
 nei.recipe.metallurgycm.crusher=Crushing
 nei.recipe.metallurgycm.metal.furnace=Metal Furnace
 nei.recipe.metallurgycm.smelter=Lava Smelting
+nei.recipe.metallurgycm.xp=%d XP
